# strands-mlx

./: .gitignore  README.md  SECURITY.md  agent.py  pyproject.toml  requirements.txt  test_mlx_invoke.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: agent.yml
strands_mlx/: __init__.py  mlx_model.py  mlx_session_manager.py
strands_mlx/tools/: __init__.py  mlx_invoke.py  mlx_trainer.py
tests/: test_mlx_invoke.py  test_video_single.py
